Removed references to modules